<resources>
    <string name="app_name">PersonasMaterialClase</string>
    <string name="action_settings">Settings</string>
    <string name="agregar">Agregar</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="mensaje_error_vacio">Digite la informacion faltante</string>
    <string name="mensaje_persona_guardada">Persona Guardada Exitosamente!</string>
</resources>
